# openai-mcp-qdrant

./: .env.example  .gitignore  .npmignore  README.md  USAGE_EXAMPLES.py  package.json  pyproject.toml
src/: config.ts  index.ts  types.ts
src/embeddings/: openai-provider.ts
src/mcp_server_qdrant/: __init__.py  mcp_server.py  server.py  settings.py
src/mcp_server_qdrant/embeddings/: __init__.py  base.py  factory.py  openai_provider.py
src/mcp_server_qdrant/qdrant/: __init__.py  connector.py
src/qdrant/: connector.ts
