[project]
name = "openai-mcp-qdrant"
version = "0.1.0"
description = "Qdrant MCP server with OpenAI Compatible API embedding support"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.3.0",
    "qdrant-client>=1.12.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_qdrant"]

[project.scripts]
mcp-server-qdrant = "mcp_server_qdrant.server:main"

